second step solution

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -101,6 +101,10 @@
     "stdexcept": "cpp",
     "streambuf": "cpp",
     "typeinfo": "cpp",
-    "sstream": "cpp"
+    "sstream": "cpp",
+    "ctime": "cpp",
+    "unordered_set": "cpp",
+    "fstream": "cpp",
+    "iomanip": "cpp"
   }
 }
